# Seikaku-Engine

./: .gitignore  Cargo.toml  README.md  SDE_DATABASE.md  build.rs  esf.proto
.github/workflows/: release.yml
src/: data_types.rs  ffi.rs  lib.rs  main.rs
src/calculate/: item.rs  mod.rs  pass_1.rs  pass_2.rs  pass_3.rs  pass_4.rs
src/calculate/pass_4/: damage.rs
src/eft/: mod.rs
src/flutter/: mod.rs
src/rust/: info.rs  mod.rs  sqlite.rs
