[package]
name = "seikaku-engine"
version = "0.0.0-git"
authors = ["EVEShipFit Team <info@eveship.fit>"]
edition = "2021"
repository = "https://github.com/EVEShipFit/dogma-engine"
description = "Library to calculate statistics for EVE Online ship fits"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "seikaku-engine"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = "0.25"
strum_macros = "0.25"

# "rust" dependencies (SQLite-backed native)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

# "wasm" dependencies
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[profile.release]
opt-level = "s"

[features]
default = ["eft", "rust"]
eft = []
rust = ["dep:rusqlite", "dep:serde_json", "dep:serde_yaml"]
cli = ["rust", "dep:clap"]
wasm = ["dep:console_error_panic_hook", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
