[package]
name = "seikaku-engine"
version = "0.1.0"
edition = "2021"
description = "EVE Online ship fit statistics calculator - Flutter cross-platform library"
license = "MIT"

[lib]
name = "seikaku_engine"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "seikaku-cli"
path = "src/main.rs"
required-features = ["rust"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = "0.25"
strum_macros = "0.25"

# Shared protobuf & JSON dependencies (rust CLI / flutter FFI)
prost = { version = "0.13", optional = true }
serde_json = { version = "1.0", optional = true }

# "rust" CLI only
clap = { version = "4.5", features = ["derive"], optional = true }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.0"

[profile.release]
opt-level = "s"

[features]
default = ["eft", "flutter"]
eft = []
rust = ["dep:clap", "dep:prost", "dep:serde_json"]
flutter = ["dep:prost", "dep:serde_json"]
